NM-5041 Search layout for people

--- a/lib/tasks/litvault/liquid_views/home--index.liquid
+++ b/lib/tasks/litvault/liquid_views/home--index.liquid
@@ -11,13 +11,13 @@ partial: false
             {% include 'home/search_box_inputs.html' %}
 
             <div class="call-to-action">
-                <button type="button" data-call-to-action="true">Learn More</button>
+                <button type="button" data-call-to-action>Learn More</button>
             </div>
         </div>
     </section>
 {% endcontent_for %}
 
-<section class="home-section how-it-works">
+<section class="home-section how-it-works" id="how-it-works">
     <div class="container-fluid">
 
         <header class="section-header">
