--- a/lib/tasks/litvault/liquid_views/layouts--theme_header.liquid
+++ b/lib/tasks/litvault/liquid_views/layouts--theme_header.liquid
@@ -23,7 +23,7 @@
                 <nav class="nav-main">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/#how-it-works">How it Works</a></li>
+                        <li><a href="/#how-it-works" data-call-to-action>How it Works</a></li>
 
                         {% if current_user == blank %}
                         <li><a href="/sign-up">Sign Up</a></li>
