--- a/lib/tasks/litvault/liquid_views/search--list.liquid
+++ b/lib/tasks/litvault/liquid_views/search--list.liquid
@@ -2,7 +2,7 @@
 partial: false
 ---
 {% if params['transactable_type_class'] contains 'TransactableType' %}
-    {% include 'search/list-cases.html' %}
+    {% include 'search/list_cases.html' %}
 {% else %}
-    {% include 'search/list-people.html' %}
+    {% include 'search/list_people.html' %}
 {% endif %}
