--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -145,7 +145,13 @@
                               <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
                             {% endif %}
 
-                            <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
+                            <li>
+                                {% if current_user.has_seller_profile? %}
+                                    <div data-add-favorite-button="true" data-path="{{ object.wish_list_path }}" data-wishlistable-type="{{ object.class_name }}" data-link-to-classes="{{ link_to_classes }}" data-path-bulk="{{ object.wish_list_bulk_path }}" data-object-id="{{ object.id }}" id="favorite-button-{{ object.class_name }}-{{ object.id }}">
+                                      <div class="text-center"><img src="{{ 'components/modal/loader.gif' | image_url }}" /></div>
+                                </div>
+                              {% endif %}
+                            </li>
                             {% if user.has_active_blog? %}
                               <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
                             {% endif %}
