Added platform_context_drop methods for removing wrapper and removing default theme name

--- a/lib/tasks/litvault/liquid_views/home--index.liquid
+++ b/lib/tasks/litvault/liquid_views/home--index.liquid
@@ -1,7 +1,8 @@
 ---
 partial: false
 ---
-{{ "" | set_render_content_outside_container }}
+{{ platform_context.set_render_content_outside_container }}
+{{ platform_context.set_blank_theme_name }}
 
 {% content_for 'litvault-hero' %}
     <section class="hero-a">
