--- a/lib/tasks/litvault/liquid_views/registrations--show.liquid
+++ b/lib/tasks/litvault/liquid_views/registrations--show.liquid
@@ -1,7 +1,8 @@
 ---
 partial: false
 ---
-{{ "" | set_render_content_outside_container | set_theme_name: '' }}
+{{ platform_context.set_render_content_outside_container }}
+{{ platform_context.set_blank_theme_name }}
 
 {% assign title = platform_context.name | append: ' - ' | append: user.name %}
 {% title title %}
