UOT-34 Update message in Payment Admin > Analytics

--- a/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
@@ -8,7 +8,7 @@
 <div class="panel">
   <div class="panel-body">
     {% if payments == empty %}
-      <p class="empty-resultset">{{ 'dashboard.analytics.no_payments_received_last_7_days' | t }}</p>
+      <p class="empty-resultset">{{ 'dashboard.analytics.no_invoices_paid' | t }}</p>
     {% else %}
       <figure class="chart-a">
         <figcaption>
