NM-4086 fix displaying transformed image

--- a/app/community_views/registrations/show.html.haml
+++ b/app/community_views/registrations/show.html.haml
@@ -1,6 +1,6 @@
 .user-a
   - if @user.cover_image.present?
-    .bg{style: "background-image: url(#{@user.cover_image.url})"}
+    .bg{style: "background-image: url(#{@user.cover_image_url})"}
   - else
     .bg
   .contain
