NM-3426 Currency formatting options
* New settings and renamed methods in currency helper
* Renamed references to older methods

--- a/app/views/dashboard/company/host_reservations/_transactable_line_item.html.haml
+++ b/app/views/dashboard/company/host_reservations/_transactable_line_item.html.haml
@@ -7,13 +7,13 @@
   .col-xs-3.col-md-1
     %label.control-label Rate
     .rate{ data: { amount: unit_price.cents } }
-      = humanized_money_with_cents_and_symbol(unit_price)
+      = render_money(unit_price)
   .col-xs-6.col-md-2
     .row
       .col-xs-8
         %label.control-label= t('dashboard.host_reservations.complete_reservation.subtotal')
         .sub-total{ data: { subtotal: true, currency: @reservation.unit_price.symbol, amount: f.object.total_price } }
-          = humanized_money_with_cents_and_symbol(f.object.total_price)
+          = render_money(f.object.total_price)
       .col-xs-4
         - if @reservation.transactable_line_items.last.id != f.object.id
           = link_to_remove_association f, class: 'remove_fields' do
