--- a/app/views/dashboard/purchases/_purchase.html.haml
+++ b/app/views/dashboard/purchases/_purchase.html.haml
@@ -72,7 +72,7 @@
     %table.payment-totals
       %tr
         %th.total= t 'buy_sell_market.checkout.labels.total2'
-        %td.total= humanized_money_with_cents_and_symbol purchase.total_amount
+        %td.total= render_money purchase.total_amount
 
 %br/
 
