--- a/app/views/dashboard/recurring_bookings/_recurring_booking.html.haml
+++ b/app/views/dashboard/recurring_bookings/_recurring_booking.html.haml
@@ -73,7 +73,7 @@
       %ul.payment-documents
         - recurring_booking.additional_line_items.each do |ac|
           %li
-            =ac.name + ' - ' + humanized_money_with_cents_and_symbol(ac.total_price)
+            =ac.name + ' - ' + render_money(ac.total_price)
 
 
 .row
@@ -104,7 +104,7 @@
       - recurring_booking.recurring_booking_periods.each do |period|
         %tr
           %td= "#{I18n.l(period.period_start_date, format: :short)} - #{I18n.l(period.period_end_date, format: :short)}"
-          %td= humanized_money_with_cents_and_symbol(period.total_amount)
+          %td= render_money(period.total_amount)
           %td
             %span{class: period.payment.try(:state) }
               - if period.payment.try(:state).blank?
