--- a/app/views/dashboard/reservations/_old_reservation.html.haml
+++ b/app/views/dashboard/reservations/_old_reservation.html.haml
@@ -58,7 +58,7 @@
       %ul.payment-documents
         - reservation.additional_line_items.each do |ac|
           %li
-            =ac.name + ' - ' + humanized_money_with_cents_and_symbol(ac.total_price)
+            =ac.name + ' - ' + render_money(ac.total_price)
 
 .row
   .col-sm-9.col-sm-push-3
@@ -87,7 +87,7 @@
           = form_for reservation, method: :post, url: user_cancel_dashboard_user_reservation_path(reservation) do |f|
             = f.submit I18n.t('general.cancel'), data: { confirm: t('dashboard.user_reservations.cancel_confirmation') }, class: 'btn btn-warning'
           - if reservation.penalty_charge_apply?
-            .cc-error= t('dashboard.user_reservations.penalty_charge_will_apply', penalty_hours: reservation.cancellation_policy_penalty_hours, penalty_fee: humanized_money_with_cents_and_symbol(reservation.penalty_fee), hours_for_cancellation: reservation.cancellation_policy_hours_for_cancellation)
+            .cc-error= t('dashboard.user_reservations.penalty_charge_will_apply', penalty_hours: reservation.cancellation_policy_penalty_hours, penalty_fee: render_money(reservation.penalty_fee), hours_for_cancellation: reservation.cancellation_policy_hours_for_cancellation)
 
         - if reservation.remote_payment? && !reservation.paid? && !reservation.archived?
           = link_to t('dashboard.user_reservations.pay_now'), remote_payment_dashboard_user_reservation_path(reservation), class: 'btn btn-default'
