UOT-45 add decline collaboration button

--- a/app/views/transactable_mailer/collaborator_has_quit.text.liquid
+++ b/app/views/transactable_mailer/collaborator_has_quit.text.liquid
@@ -1,4 +1,5 @@
 Hi, {{ owner.first_name }}
 
-{{ user.first_name }} {{ user.profile_url }} decided to be no longer a collaborator on {{ transactable.name }} {{ transactable.listing_url }}
+thank you so much for inviting me to your project. However, I am not available for this opportunity at this time.
 
+{{ user.first_name }} {{ user.profile_url }}
