--- a/app/views/transactable_mailer/collaborator_has_quit.html.liquid
+++ b/app/views/transactable_mailer/collaborator_has_quit.html.liquid
@@ -1,4 +1,6 @@
 <h1>Hi, {{ owner.first_name }}</h1>
 
-<p><a href="{{ user.profile_url }}">{{ user.first_name }}</a> decided to be no longer a collaborator on <a href="{{ transactable.listing_url }}">{{ transactable.name }}</a>
-
+<p>thank you so much for inviting me to your project. However, I am not available for this opportunity at this time.</p>
+<p>
+  <a href="{{ user.profile_url }}">{{ user.first_name }}</a>
+</p>
