--- a/app/views/dashboard/company/transactables/form_fields/action_types/_offer_action.html.haml
+++ b/app/views/dashboard/company/transactables/form_fields/action_types/_offer_action.html.haml
@@ -3,6 +3,7 @@
     = pricing.hidden_field :transactable_type_pricing_id, value: pricing.object.transactable_type_pricing.try(:id)
     = pricing.input :_destroy, as: :hidden
     = pricing.hidden_field :enabled, value: '1'
+    = pricing.hidden_field :exclusive_price, value: '1'
 
     - if fields.include?('pro_bono')
       = pricing.input :is_free_booking, as: :radio_buttons, collection: [[t('pricing.free_disabled'), '0'], [t('pricing.free_enabled'), '1']], input_html: { 'data-free-booking' => true }, checked: (pricing.object.is_free_booking ? '1' : '0')
