--- a/lib/tasks/uot/templates/dashboard_company_users_collaborations_for_current_user.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_users_collaborations_for_current_user.liquid
@@ -48,6 +48,11 @@
 
       <div class="actions">
         <button type="submit" class="button-a">Invite</button>
+        {% if user.pending_collaborated_transactables.size == 0 %}
+          <button type="button" class="button-b" data-close>Cancel</button>
+        {% else %}
+          <button type="button" class="button-b" data-close>I'm done</button>
+        {% endif %}
       </div>
     </form>
 
@@ -68,8 +73,8 @@
 
     <div class="actions">
       <a href="{{ platform_context.transactable_types[0].new_transactable_path }}" class="button-a">Add a project</a>
+      <button type="button" class="button-b" data-close>Cancel</button>
     </div>
 
   {% endif %}
 </div>
-
