--- a/app/frontend/stylesheets/sections/_user_profile.scss
+++ b/app/frontend/stylesheets/sections/_user_profile.scss
@@ -1,178 +1,217 @@
 .user-profile {
-    margin-bottom: 40px;
-    background: #fff;
+  margin-bottom: 40px;
+  background: #fff;
 
-    * {
-        box-sizing: border-box;
+  * {
+    box-sizing: border-box;
+  }
+
+  header {
+    background: none;
+    height: auto;
+    position: relative;
+  }
+
+  .user-profile__header {
+    background: #dfdfdf;
+    padding: 15px;
+  }
+
+  .profile-content {
+    padding: 15px;
+  }
+
+  .portrait {
+    position: relative;
+    display: block;
+
+    img {
+      margin: 0 auto 20px;
+      max-width: 200px;
+      display: block;
+      background: #fff;
+      padding: 2px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
     }
+  }
 
-    header {
-        background: none;
-        height: auto;
-        position: relative;
+  .user-meta {
+    margin-bottom: 10px;
+
+    b {
+      font-weight: bold;
     }
+  }
 
+  @media (min-width: 769px) {
     .user-profile__header {
-        background: #dfdfdf;
-        padding: 15px;
-    }
+      .span7 {
+        float: left;
+        margin-left: 20px;
+        width: calc(100% - 380px);
+        padding: 0;
+        min-height: 80px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
 
-    .profile-content {
-        padding: 15px;
-    }
-
-    .portrait {
+      .span3 {
         position: relative;
-        display: block;
+        float: left;
+        width: 200px;
+        padding: 0;
 
         img {
-            margin: 0 auto 20px;
-            max-width: 200px;
-            display: block;
-            background: #fff;
-            padding: 2px;
-            border: 1px solid rgba(0,0,0,0.3);
+          position: absolute;
+          left: 0;
+          right: 0;
+          top: 0;
+          width: 200px;
+          height: 200px;
+          margin: 0;
         }
-    }
+      }
 
-
-    @media (min-width: 769px) {
-        .portrait {
-            img {
-                position: absolute;
-                margin: 0;
-                max-width: 100%;
-                left: 0;
-                right: 0;
-                top: 0;
-            }
-        }
-
-        .profile-content > .row-fluid > .span3 {
-            &:before {
-                display: block;
-                content: "";
-                width: 100%;
-                padding-top: calc(75% - 10px);
-            }
-        }
+      .span2 {
+        float: right;
+        width: 160px;
+        min-height: 80px;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
     }
 
     .user-meta {
-        margin-bottom: 10px;
-
-        b {
-            font-weight: bold;
-        }
+      margin-bottom: 0;
     }
 
-    .follow {
-        padding: 0;
-        list-style: none;
-        margin-bottom: 10px;
-        text-align: center;
+    .profile-content {
+      .span3 {
+        float: left;
+        width: 200px;
+        padding-top: 100px;
+        margin: 0;
+      }
 
-        @media (min-width: 769px) {
-            text-align: right;
-        }
+      .span9 {
+        float: right;
+        width: calc(100% - 220px);
+        margin: 0;
+      }
+    }
+  }
 
-        li {
-            display: inline-block;
-            margin-left: 8px;
-        }
+  .follow {
+    padding: 0;
+    list-style: none;
+    margin-bottom: 10px;
+    text-align: center;
 
-        span {
-            font-size: 0;
-
-            &:before {
-                font-size: 25px;
-            }
-        }
-
-        .twitter a {
-            color: #55acee;
-        }
-
-        .facebook a {
-            color: #3b5998;
-        }
-
-        .linkedin a {
-            color: #0077b5;
-        }
-
-        .googleplus a {
-            color: #dc4e41;
-        }
+    @media (min-width: 769px) {
+      text-align: right;
     }
 
-    .tab-content {
-        padding: 15px 0 0;
+    li {
+      display: inline-block;
+      margin-left: 8px;
     }
 
-    .section-header {
-        position: relative;
-        margin-top: 20px;
-        margin-bottom: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #eee;
+    span {
+      font-size: 0;
 
-        h2 {
-            font-size: 20px;
-        }
-
-        .edit-link {
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-
-        &:first-child {
-            margin-top: 0;
-        }
+      &:before {
+        font-size: 25px;
+      }
     }
 
-    dl {
-        &:after {
-            display: table;
-            clear: both;
-            width: 100%;
-            content: "";
-        }
+    .twitter a {
+      color: #55acee;
     }
 
+    .facebook a {
+      color: #3b5998;
+    }
+
+    .linkedin a {
+      color: #0077b5;
+    }
+
+    .googleplus a {
+      color: #dc4e41;
+    }
+  }
+
+  .tab-content {
+    padding: 15px 0 0;
+  }
+
+  .section-header {
+    position: relative;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+
+    h2 {
+      font-size: 20px;
+    }
+
+    .edit-link {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  dl {
+    &:after {
+      display: table;
+      clear: both;
+      width: 100%;
+      content: "";
+    }
+  }
+
+  dt {
+    font-weight: bold;
+    color: #2a2a2a;
+  }
+
+  dd {
+    margin-bottom: 1em;
+  }
+
+  @media (min-width: 769px) {
     dt {
-        font-weight: bold;
-        color: #2a2a2a;
+      clear: both;
+      float: left;
+      width: 20%;
+      margin-bottom: 1em;
+      text-align: right;
     }
 
     dd {
-        margin-bottom: 1em;
+      float: right;
+      width: 75%;
     }
+  }
 
-    @media (min-width: 769px) {
-        dt {
-            clear: both;
-            float: left;
-            width: 20%;
-            margin-bottom: 1em;
-            text-align: right;
-        }
+  .verifications {
+    .ico-check {
+      color: #5dc998;
 
-        dd {
-            float: right;
-            width: 75%;
-        }
+      &:before {
+        vertical-align: middle;
+        margin-right: 10px;
+      }
     }
-
-    .verifications {
-        .ico-check {
-            color: #5dc998;
-
-            &:before {
-                vertical-align: middle;
-                margin-right: 10px;
-            }
-        }
-    }
+  }
 }
