--- a/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
+++ b/lib/tasks/litvault/liquid_views/home--search_box_inputs.liquid
@@ -8,17 +8,18 @@
 
         <div class="form-field form-field-state">
             <label for="form-field-state">By State</label>
-            {% for ca in transactable_types.first.custom_attributes %}
+
 
             <span class="select-a">
-                <select name='lg_custom_attributes[{{ca.name}}][]' id="form-field-state" class="unstyled-select">
+                <select name='lg_custom_attributes[state][]' id="form-field-state" class="unstyled-select">
                     <option value="">By State</option>
+                    {% for ca in platform_context.transactable_types.first.custom_attributes %}
                     {% for value in ca.valid_values %}
                     <option value='{{ value }}'>{{ value }}</option>
                     {% endfor %}
+                    {% endfor %}
                 </select>
             </span>
-            {% endfor %}
         </div>
 
 
