--- a/lib/tasks/litvault/liquid_views/search--list_cases.liquid
+++ b/lib/tasks/litvault/liquid_views/search--list_cases.liquid
@@ -5,7 +5,7 @@
             <h3 class="struct-label">Change search type to:</h3>
             <ul>
                 <li class="selected"><a href="/search?transactable_type_id={{ searcher.transactable_types.first.id }}&amp;transactable_type_class=TransactableType">Case Search</a></li>
-                <li><a href="/search?transactable_type_id=580&amp;transactable_type_class=InstanceProfileType">People Search</a></li>
+                <li><a href="/search/people">People Search</a></li>
             </ul>
         </div>
         <form action="/search" method="get" class="search-form">
