--- a/app/views/instance_admin/manage/instance_profile_types/search_settings.html.haml
+++ b/app/views/instance_admin/manage/instance_profile_types/search_settings.html.haml
@@ -12,6 +12,9 @@
       .input-container.col-xs-6
         .input-col-clearfix
           = f.input :search_only_enabled_profiles, as: :boolean, inline_label: true
+      .input-container.col-xs-6
+        .input-col-clearfix
+          = f.input :search_engine, collection: Instance::SEARCH_ENGINES, include_blank: false, input_html: { class: 'form-control' }
 
     %hr
     %h4= t('instance_admin.manage.search.category_tree_search')
