--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -32,6 +32,7 @@
                 <label for="search-order">Sort by:</label>
                 <span class="select-a">
                     <select id="search-order" name="sort" class="unstyled-select">
+                        <option {% if params['sort'] == blank  %}selected{% endif %} value=''>Relevance</option>
                         <option {% if params['sort'] == 'custom_attributes.hourly_rate_asc'  %}selected{% endif %} value='custom_attributes.hourly_rate_asc'>Hourly rate ascending</option>
                         <option {% if params['sort'] == 'custom_attributes.hourly_rate_desc' %}selected{% endif %} value='custom_attributes.hourly_rate_desc'>Houry rate descending</option>
                     </select>
