--- a/app/views/dashboard/layout/_left_navigation.html.liquid
+++ b/app/views/dashboard/layout/_left_navigation.html.liquid
@@ -104,9 +104,10 @@
           {% assign orders_received_visible = 'dashboard/orders_received' | is_visible %}
           {% assign orders_received_show = current_user.registration_completed? and orders_received_visible %}
           {% assign orders_received_path = 'dashboard_company_orders_received_index_path' | generate_url %}
+          {% assign orders_tab_show = orders_show and orders_received_show %}
           {% assign orders_received_selected = current_path | matches: orders_received_path %}
 
-          {% if (orders_visible and orders_enabled) or orders_received_show %}
+          {% if orders_tab_show %}
             <li id="dashboard-nav-orders_header" class="{% if orders_selected or orders_received_selected %}selected{% endif %}">
               <span>{{ 'dashboard.nav.orders_header' | t }} {{ current_user.reservations_count }}</span>
 
