Fix broken chosen plugin dependency

--- a/app/frontend/stylesheets/dashboard.scss
+++ b/app/frontend/stylesheets/dashboard.scss
@@ -4,7 +4,7 @@
 @import "bootstrap-switch/dist/css/bootstrap3/bootstrap-switch";
 @import "spectrum-colorpicker/spectrum";
 
-@import "chosen-npm/public/chosen";
+@import "chosen-js/chosen";
 
 @import "select2/select2";
 
