--- a/app/frontend/stylesheets/instance_admin_vendor.scss
+++ b/app/frontend/stylesheets/instance_admin_vendor.scss
@@ -13,7 +13,7 @@ $fa-font-path: '/assets/font-awesome';
 @import "font-awesome/scss/icons";
 
 @import "jquery-jcrop/css/jquery.Jcrop";
-@import "chosen-npm/public/chosen";
+@import "chosen-js/chosen";
 @import "vendor/overrides/jcrop";
 @import "vendor/icui";
 
