--- a/app/frontend/stylesheets/application_vendor.scss
+++ b/app/frontend/stylesheets/application_vendor.scss
@@ -3,7 +3,8 @@
 
 @import "select2/select2";
 @import "animate.css/animate";
-@import "chosen-npm/public/chosen";
+@import "chosen-js/chosen";
+
 
 @import "vendor/bootstrap-custom";
 @import "vendor/bootstrap-modal-fullscreen";
